--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "webpack serve"
+    "start": "webpack serve --config webpack.config.js"
   },
-  "dependencies": {
+  "devDependencies": {
+    "html-webpack-plugin": "^5.6.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
