feat: add configuration to load the react application

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,11 +1,15 @@
 {
   "name": "react",
   "version": "1.0.0",
+  "scripts": {
+    "start": "webpack serve"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.45"
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18"
   }
 }
