--- a/packages/container/package.json
+++ b/packages/container/package.json
@@ -1,5 +1,8 @@
 {
   "name": "container",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack serve"
+  }
 }
