--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "repository": "git@github.com:SinamalTess/case-study-micro-frontends.git",
     "author": "tess.sinamal@gmail.com",
     "license": "MIT",
+    "packageManager": "yarn@4.0.2",
     "workspaces": [
         "packages/*"
     ],
     "scripts": {
-        "start": "webpack serve --config webpack.config.js",
+        "start": "yarn workspaces foreach -Ap run start",
         "prepare": "husky install",
         "prettier": "prettier . --write"
     },
     "devDependencies": {
         "html-webpack-plugin": "^5.6.0",
+        "husky": "^8.0.0",
         "prettier": "^3.1.1",
         "ts-loader": "^9.5.1",
         "typescript": "^5.3.3",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^4.15.1",
-        "husky": "^8.0.0"
+        "webpack-dev-server": "^4.15.1"
     }
 }
